cambios fin clase 2 feb

--- a/index.html
+++ b/index.html
@@ -1,67 +1,63 @@
 <!DOCTYPE html>
-<html lang="es">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <!-- Esto es el título de la web, también es el
-        texto que aparece en el navegador -->
-        <title>Document</title>
-    </head>
-    <body>
-        <!-- Son títulos -->
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Anthony Ruiz N - Junior Software Developer - Frontend</title>
+</head>
+<body>
+    <nav>
         <div>
-            <h1>Hola mundo, soy Anthony estoy aprendiendo a programar</h1>
-            <h2>Este es otro texto</h2>
-            <h3>Ejemplo de h3</h3>
-            <h4>Ejemplo de h4</h4>
-            <h5>Ejemplo de h5</h5>
-            <h6>Ejemplo de h6</h6>
+            logo
+        </div>
+        <div>
+            <li>
+                <li> 
+                    <a href="#">Home</a>
+                </li>
+                <li>
+                    <a href="#">About me</a>
+                </li>
+                <li>
+                    <a href="#">Projects</a>
+                </li>
+                <li>
+                    <a href="#">Skills</a>
+                </li>
+                <li>
+                    <a href="#">Career</a>
+                </li>
+                <li>
+                    <a href="#">Recommendations</a>
+                </li>
+                <li>
+                    <a href="#">Contact</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+    <main>
+        <div>
+            <p> Saludos</p>
+            <h1>Anthony ruiz N</h1>
+            <H2>Junior Software Developer</H2>
+            <div>
+                <a href="">Linkedin</a>
+                <a href="">Github</a>
+                <a href="">Instagram</a>
+            </div>
+        </div>
+        <div>
+            <img src="" alt="Anthony Ruiz N / Foto de perfil" />
         </div>
         <div>
             <p>
-                Hola, estoy aprendiendo a <b>programar</b> y esto 
-                es un parrafo que me ayuda <i>practicar</i>
+                <a href="#">Download CV</a>
+            </p>
+            <p>
+                <a href="">Talk with me</a>
             </p>
         </div>
-        </div>
-            <h3 aria-label="Usando imágenes de internet">
-                Usando imágenes de internet
-            </h3>
-            <img 
-                src="https://img.freepik.com/vector-gratis/discurso-comico-burbujas-patrones-fisuras_225004-815.jpg?size=338&ext=jpg&ga=GA1.1.1392540950.1706837904&semt=sph" 
-                alt="Foto de los vengadores" 
-                width="400"
-                height="300"
-            />
-            <a href="https:\\google.com" target="_blank">Google</a>
-
-            <a href="https:\\youtube.com" target="blank"> 
-                <img
-                src="https://img.freepik.com/vector-gratis/discurso-comico-burbujas-patrones-fisuras_225004-815.jpg?size=338&ext=jpg&ga=GA1.1.1392540950.1706837904&semt=sph" 
-                alt="Foto de los vengadores" 
-                width="400"
-                height="300"
-                />
-            </a>
-        </div>
-        <div>
-            <h3>Listas ordenadas y no ordenadas</h3>
-            <p>Lista de lenguajes</p>
-            <ol>
-                <li>JavaScrip</li>
-                <li>C++</li>
-                <li>TypeScript</li>
-                <li>Java</li>
-                <li>PHP</li>
-            </ol>
-            <p>Lista no ordenada de Framework</p>
-            <ul>
-                <li><a href="https://nextjs.org/" target="_blank">NextJS</a></li>
-                <li>Larabel</li>
-                <li>Django</li>
-                <li>Flash</li>
-                <li>Svelte Kit</li>
-            </ul> 
-        </div>
-    </body>
+    </main>
+</body>
 </html>
