--- a/index.html
+++ b/index.html
@@ -1,63 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Anthony Ruiz N - Junior Software Developer - Frontend</title>
-</head>
-<body>
-    <nav>
-        <div>
-            logo
-        </div>
-        <div>
-            <li>
-                <li> 
-                    <a href="#">Home</a>
-                </li>
-                <li>
-                    <a href="#">About me</a>
-                </li>
-                <li>
-                    <a href="#">Projects</a>
-                </li>
-                <li>
-                    <a href="#">Skills</a>
-                </li>
-                <li>
-                    <a href="#">Career</a>
-                </li>
-                <li>
-                    <a href="#">Recommendations</a>
-                </li>
-                <li>
-                    <a href="#">Contact</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
-    <main>
-        <div>
-            <p> Saludos</p>
-            <h1>Anthony ruiz N</h1>
-            <H2>Junior Software Developer</H2>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Anthony Ruiz N - Junior Software Developer - Frontend</title>
+    </head>
+    <body>
+        <nav>
             <div>
-                <a href="">Linkedin</a>
-                <a href="">Github</a>
-                <a href="">Instagram</a>
+                logo
             </div>
-        </div>
-        <div>
-            <img src="" alt="Anthony Ruiz N / Foto de perfil" />
-        </div>
-        <div>
-            <p>
-                <a href="#">Download CV</a>
-            </p>
-            <p>
-                <a href="">Talk with me</a>
-            </p>
-        </div>
-    </main>
-</body>
+            <div>
+                <ul>
+                    <li> 
+                        <a href="#">Home</a>
+                    </li>
+                    <li>
+                        <a href="#">About me</a>
+                    </li>
+                    <li>
+                        <a href="#">Projects</a>
+                    </li>
+                    <li>
+                        <a href="#">Skills</a>
+                    </li>
+                    <li>
+                        <a href="#">Career</a>
+                    </li>
+                    <li>
+                        <a href="#">Recommendations</a>
+                    </li>
+                    <li>
+                        <a href="#">Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+        <main>
+            <div>
+                <p>👋 Hi!</p>
+                <h1>Anthony Ruiz N</h1>
+                <H2>Junior Software Developer</H2>
+                <div>
+                    <a href="">Linkedin</a>
+                    <a href="">Github</a>
+                    <a href="">Instagram</a>
+                </div>
+            </div>
+            <div>
+                <img src="" alt="Anthony Ruiz N / Profile photo" />
+            </div>
+            <div>
+                <p>
+                    <a href="#">Download CV</a>
+                </p>
+                <p>
+                    <a href="">Talk with me</a>
+                </p>
+            </div>
+        </main>
+    </body>
 </html>
