--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Anthony Ruiz N - Junior Software Developer - Frontend</title>
+        <link rel="stylesheet" href="./CSS/style.css" />
     </head>
     <body>
         <nav>
@@ -11,7 +12,7 @@
                 logo
             </div>
             <div>
-                <ul>
+                <ul class="nav-list">
                     <li> 
                         <a href="#">Home</a>
                     </li>
