clase de jueves semana 2

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
         <nav>
             <div>
-                logo
+                <img src="./images/logo-1.svg" with="35" height="40" alt="logo" >
             </div>
             <div>
                 <ul class="nav-list">
@@ -37,28 +37,67 @@
                 </ul>
             </div>
         </nav>
-        <main>
+        <main class="flex align-center">
             <div>
-                <p>👋 Hi!</p>
-                <h1>Anthony Ruiz N</h1>
-                <H2>Junior Software Developer</H2>
-                <div>
-                    <a href="">Linkedin</a>
-                    <a href="">Github</a>
-                    <a href="">Instagram</a>
+                <span class="gretting">👋 Hi</span>
+                <h1 class="title">Anthony Ruiz</h1>
+                <p class="description">Junior Software Developer</p>
+                <div class="social-links align center">
+                    <a href="">
+                        <img src="./images/linkedin.svg" alt="linkedin" />
+                    </a>
+                    <a href="">
+                        <img src="./images/github.svg" alt="github" />
+                    </a>
+                    <a href="">
+                        <img src="./images/behance.svg" alt="behance" />
+                    </a>
                 </div>
             </div>
-            <div>
-                <img src="" alt="Anthony Ruiz N / Profile photo" />
+            <div class="container-profile">
+                <img 
+                src="./images/profile.jpg" 
+                alt="Anthony Ruiz - Profile photo" 
+                />
             </div>
-            <div>
-                <p>
-                    <a href="#">Download CV</a>
-                </p>
-                <p>
-                    <a href="">Talk with me</a>
-                </p>
+            <div class="container-contact">
+                    <a href="#">
+                        CV Download
+                        <img src="./images/download.svg" alt="cv download" />
+                    </a>
+                    <a href="">
+                        Talk with me
+                        <img src="./images/whatsapp.svg" alt="talk with me" />
+                    </a>
             </div>
         </main>
+        <section class="container-about-me">
+            <div>
+                <img 
+                src="./images/profile.jpg" 
+                alt="Anthony Ruiz - Profile photo" 
+                />
+            </div>
+            <div>
+                <span class="gretting"> 🤔 About me</span>
+                <h2 class="mt-20">Anthony Francisco</h2>
+                <h2 class="mb-20">Ruiz Noriega</h2>
+                <p class="mb-20">
+                    😃 My name is Anthony Ruiz Noriega but you can tell me Tony. Is a pleassure!
+                </p>
+                <p>
+                    🤓 I have more than 5 years developing and programming interfaces with JavaScript React JS and Typescript.
+                </p>
+                <p>
+                    🎓 Graduated in Systems Analysis and Development from Faculdade São José de Campos.
+                </p>
+                <p>
+                    💻 Interests and Front-end development with React, React Native, Vue JS and UX/UI Design
+                </p>
+                <p class="mt-20">
+                    🥇 Willing to be a little better every day 
+                </p>
+            </div>
+        </section>
     </body>
 </html>
