revision de codigo

--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
         <link rel="stylesheet" href="./CSS/style.css" />
     </head>
     <body>
-        <nav>
+        <nav class="flex align-center">
             <div>
                 <img src="./images/logo-1.svg" with="35" height="40" alt="logo" >
             </div>
             <div>
-                <ul class="nav-list">
+                <ul class="nav-list flex">
                     <li> 
                         <a href="#">Home</a>
                     </li>
@@ -61,13 +61,13 @@
                 />
             </div>
             <div class="container-contact">
-                    <a href="#">
+                    <a href="#" class="align-center">
                         CV Download
                         <img src="./images/download.svg" alt="cv download" />
                     </a>
-                    <a href="">
-                        Talk with me
+                    <a href="" class="align-center">
                         <img src="./images/whatsapp.svg" alt="talk with me" />
+                        Talk with me
                     </a>
             </div>
         </main>
@@ -83,19 +83,19 @@
                 <h2 class="mt-20">Anthony Francisco</h2>
                 <h2 class="mb-20">Ruiz Noriega</h2>
                 <p class="mb-20">
-                    😃 My name is Anthony Ruiz Noriega but you can tell me Tony. Is a pleassure!
+                    😃 My name is Anthony Ruiz Noriega, but you can tell me Tony. Is a pleassure!
                 </p>
                 <p>
-                    🤓 I have more than 5 years developing and programming interfaces with JavaScript React JS and Typescript.
+                    🤓 I have more than 5 years developing and programming interfaces with JavaScript, React JS and Typescript
                 </p>
                 <p>
-                    🎓 Graduated in Systems Analysis and Development from Faculdade São José de Campos.
+                    🎓 Graduated in Systems Analysis and Development from Faculty of Engineering of PUCP
                 </p>
                 <p>
-                    💻 Interests and Front-end development with React, React Native, Vue JS and UX/UI Design
+                    💻 Interested in Front-end development with React, React Native, Vue JS and UX/UI Design
                 </p>
                 <p class="mt-20">
-                    🥇 Willing to be a little better every day 
+                    🥇 Willing to be a better every day 
                 </p>
             </div>
         </section>
