feat: revision clase anterior

--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Anthony Ruiz N - Junior Software Developer - Frontend</title>
+
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+          href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;500;600;700;800;900&display=swap"
+          rel="stylesheet"
+        />
+
         <link rel="stylesheet" href="./CSS/style.css" />
     </head>
     <body>
@@ -71,6 +79,41 @@
                     </a>
             </div>
         </main>
+        <hr class="divider"/>
+        <section>
+          <div class="container-cards">
+            <div>
+                <img src="./images/code-icon.svg" alt="">
+                <p>7 years as</p>
+                <h5>Programer</h5>
+            </div>
+            <div>
+                <img src="./images/projects-icon.svg" alt="">
+                <p>7 years solved</p>
+                <h5>Projects</h5>
+            </div>
+            <div>
+                <img src="./images/design-icon.svg" alt="">
+                <p>7 years make</p>
+                <h5>Designer</h5>
+            </div>
+          </div>
+          <div class="container-sumary">
+            <div>
+                <p>Developer</p>
+                <p>Front/end</p>    
+            </div>
+            <div>
+                <p>Many projects</p>
+                <p>Expirience</p>
+            </div>
+            <div>
+                <p>Freelance Designer</p>
+                <p>UI / UX</p>
+            </div>
+          </div>
+        </section>
+        <hr class="divider"/>
         <section class="container-about-me">
             <div>
                 <img 
